<resources>
    <string name="app_name">Stopwatch</string>

    <string name="action_settings">Settings</string>
    <string name="title">stopwatch</string>
    <string name="reset_time">00:00:000</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="reset">reset</string>
    <string name="lap">lap</string>
    <string name="tab">\u0009</string>

</resources>
