<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/reset_time"
            android:textSize="60dp"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-thin"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/lapContainer"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lapNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lap #"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/lapTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="15sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lapLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3">

        <Button
            style="@style/button"
            android:id="@+id/buttonStart"
            android:text="@string/start"
            android:textColor="#ff02ca00"
            android:onClick="buttonStart"
            android:layout_gravity="center" />

        <Button
            style="@style/button"
            android:id="@+id/buttonPause"
            android:text="@string/pause"
            android:textColor="#ffef0008"
            android:onClick="buttonPause"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
 />

        <Button
            style="@style/button"
            android:id="@+id/buttonLap"
            android:text="@string/lap"
            android:onClick="buttonLap"
            android:visibility="gone"
            android:layout_gravity="center" />

        <Button
            style="@style/button"
            android:id="@+id/buttonResume"
            android:text="@string/resume"
            android:onClick="buttonResume"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginRight="30dp" />

        <Button
            style="@style/button"
            android:id="@+id/buttonReset"
            android:text="@string/reset"
            android:onClick="buttonReset"
            android:visibility="gone"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>
